fix style on small screens

--- a/packages/frontend/src/styles/views/Auth.css
+++ b/packages/frontend/src/styles/views/Auth.css
@@ -1,12 +1,4 @@
 main.view.auth > main > div {
-    display: flex;
-
-    flex-direction: column;
-
-    justify-content: center;
-
-    align-items: center;
-
     padding-top: 0;
     padding-left: 0;
     padding-right: 0;
@@ -18,11 +10,21 @@ main.view.auth > main > div {
 main.view.auth > main > div > div {
     display: flex;
 
-    flex-direction: column;
-
     justify-content: center;
 
     align-items: center;
+
+    min-height: 100%;
+}
+
+main.view.auth > main > div > div > div {
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+
+    text-align: center;
 
     background-color: white;
 
@@ -30,16 +32,12 @@ main.view.auth > main > div > div {
 
     padding: 1em;
 
+    max-width: 30em;
+
     border-radius: 1em;
 }
 
-main.view.auth > main > div > div > * {
-    max-width: 30em;
-
-    text-align: center;
-}
-
-main.view.auth > main > div > div > img {
+main.view.auth > main > div > div > div > img {
     display: block;
 
     width: 5em;
@@ -48,35 +46,35 @@ main.view.auth > main > div > div > img {
     margin: 1em;
 }
 
-main.view.auth > main > div > div > h5 {
+main.view.auth > main > div > div > div > h5 {
     color: gray;
 }
 
-main.view.auth > main > div > div > h1 > span {
+main.view.auth > main > div > div > div > h1 > span {
     white-space: nowrap;
 }
 
-main.view.auth > main > div > div > div {
+main.view.auth > main > div > div > div > div {
     padding-top: 1em;
     padding-bottom: 1em;
 }
 
-main.view.auth > main > div > div > div > input {
+main.view.auth > main > div > div > div > div > input {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 
     max-width: calc(100vw - 10em);
 }
 
-main.view.auth > main > div > div > div > button {
+main.view.auth > main > div > div > div > div > button {
     margin-left: 0.25em;
     margin-right: 0.25em;
 
     width: 7.5em;
 }
 
-main.view.auth > main > div > div > div > input[type = 'email'] + button,
-main.view.auth > main > div > div > div > input[type = 'text'] + button {
+main.view.auth > main > div > div > div > div > input[type = 'email'] + button,
+main.view.auth > main > div > div > div > div > input[type = 'text'] + button {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 
@@ -84,6 +82,6 @@ main.view.auth > main > div > div > div > input[type = 'text'] + button {
     margin-right: 0;
 }
 
-main.view.auth > main > div > div > div > a {
+main.view.auth > main > div > div > div > div > a {
     width: 7.5em;
 }
